# unseen_workshop_site

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  unseen.css  unseen.html
app/: in_memory_db.py  main.py
static/: dark_sense.avif  unseen.css
templates/: admin.html  error.html  how_to_get_there.html  login.html  portal.html  register.html  verify.html
