[project]
name = "unseen"
version = "0.1.0"
description = "UNSEEN workshop app"
requires-python = ">=3.13"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.data-files]
"static" = ["static/**/*.*"]
"templates" = ["templates/**/*.*"]
"." = ["unseen.html", "config.example.yaml"]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_typed = true
warn_untyped_fields = true

[tool.ruff]
target-version = "py313"
line-length = 110
exclude = ["static", "templates", "unseen.html"]

[tool.ruff.lint]
extend-select = ["I"]
